--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,3 +5,10 @@ http {
   port = ${?HTTP_PORT}
 }
 
+akka {
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = "INFO"
+  stdout-loglevel = "INFO"
+  log-dead-letters = 10
+  log-dead-letters-during-shutdown = on
+}
