--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,6 @@
 http {
+  app-root = "localhost:9000"
+  app-root = ${?APP_ROOT}
   interface = "0.0.0.0"
   interface = ${?HTTP_INTERFACE}
   port = 9000
